feature/#6 Setting security into feature/#4